--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.1",
+    "jwt-decode": "^3.1.2",
+    "socket.io-client": "^4.5.3",
+    "sweetalert2": "^11.6.5",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue-apexcharts": "^1.6.2",
+    "vue-router": "^3.5.1",
+    "vue2-editor": "^2.10.3",
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,7 +31,11 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
